recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value step
  if (step>=1){
      ^Tree:10: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^